Fix overflowing header on small screens

--- a/assets/styles/_layout.scss
+++ b/assets/styles/_layout.scss
@@ -62,7 +62,7 @@ body {
 
   &--header-small,
   &--header-large {
-    padding-top: 74px;
+    padding-top: 71px;
   }
 
   @media (min-width: $breakpoint-tablet) {
