--- a/assets/styles/components/_header.scss
+++ b/assets/styles/components/_header.scss
@@ -81,7 +81,7 @@
     }
 
     svg {
-      height: 45px;
+      height: 42px;
       margin-top: 3px;  // Compensate for vertical asymmetry
       font-size: 0;
       fill: var(--color-fg);
